# kde2-kdemultimedia

./: CMakeLists.txt  Makefile.am  README  README.sound-config  config.h.bot  configure.in.in  kdemultimedia.spec.in
aktion/: AUTHORS  ChangeLog  Makefile.am  aktion.desktop  aktionConf.cpp  aktionConf.h  aktionVm.cpp  aktionVm.h  aktion_part.cpp  aktion_part.h  aktion_part.rc  aktionrc  capture.cpp  capture.h  configure.in.in  kxanim.cpp  kxanim.h  main.cpp  principal.cpp  principal.h
aktion/pics/: Makefile.am
arts/builder/: Makefile.am  TODO  artsbuilder.desktop  autorouter.cpp  autorouter.h  createtool.cpp  createtool.h  dirmanager.cpp  dirmanager.h  drawutils.cpp  drawutils.h  execdlg.cpp  execdlg.h  main.cpp  main.h  menumaker.cpp  menumaker.h  module.cpp  module.h  namedlg.cpp  namedlg.h  portablekde.cpp  portablekde.h  portposdlg.cpp  portposdlg.h  portpropdlg.cpp  portpropdlg.h  retrievedlg.cpp  retrievedlg.h  scomponent.cpp  scomponent.h  session.cpp  session.h  structure.cpp  structure.h  structureport.cpp  structureport.h  x-artsbuilder.desktop
arts/builder/pics/: Makefile.am
arts/gui/common/: Makefile.am  artsgui.idl  genericguifactory_impl.cc
arts/gui/kde/: Makefile.am  artstestgui.cpp  kartswidget.cpp  kartswidget.h  kbutton_impl.cpp  kbutton_impl.h  khbox_impl.cpp  khbox_impl.h  klineedit_impl.cpp  klineedit_impl.h  kpoti.cpp  kpoti.h  kpoti_impl.cpp  kpoti_impl.h  kspinbox_impl.cpp  kspinbox_impl.h  kvbox_impl.cpp  kvbox_impl.h  kwidget_impl.cpp  kwidget_impl.h  kwidgetrepo.h
arts/midi/: Makefile.am  artsmidi.idl  audiomiditimer_impl.cc  midiclient_impl.cc  midiclient_impl.h  midimanager_impl.cc  midimanager_impl.h  midimanagerport_impl.cc  midimanagerport_impl.h  midimsg.c  midisend.cc  midisend.h  miditest_impl.cc  miditimercommon.h  rawmidiport_impl.cc  systemmiditimer_impl.cc
arts/modules/: Makefile.am  artsmodules.idl  c_filter_stuff.c  c_filter_stuff.h  freeverbguifactory_impl.cc  objectcache_impl.cc  synth_atan_saturate_impl.cc  synth_autopanner_impl.cc  synth_brickwall_limiter_impl.cc  synth_capture_wav_impl.cc  synth_cdelay_impl.cc  synth_data_impl.cc  synth_debug_impl.cc  synth_delay_impl.cc  synth_envelope_adsr_impl.cc  synth_fm_source_impl.cc  synth_freeverb_impl.cc  synth_fx_cflanger_impl.cc  synth_midi_debug_impl.cc  synth_midi_test_impl.cc  synth_moog_vcf_impl.cc  synth_nil_impl.cc  synth_noise_impl.cc  synth_pitch_shift_impl.cc  synth_pscale_impl.cc  synth_rc_impl.cc  synth_sequence_impl.cc  synth_shelve_cutoff_impl.cc  synth_std_equalizer_impl.cc  synth_tremolo_impl.cc  synth_wave_pulse_impl.cc  synth_wave_softsaw_impl.cc  synth_wave_square_impl.cc  synth_wave_tri_impl.cc  synth_xfade_impl.cc
arts/modules/freeverb/: Makefile.am
arts/modules/mcopclass/: FreeverbGuiFactory.mcopclass  Makefile.am  Synth_ATAN_SATURATE.mcopclass  Synth_AUTOPANNER.mcopclass  Synth_BRICKWALL_LIMITER.mcopclass  Synth_CAPTURE_WAV.mcopclass  Synth_CDELAY.mcopclass  Synth_DATA.mcopclass  Synth_DEBUG.mcopclass  Synth_DELAY.mcopclass  Synth_ENVELOPE_ADSR.mcopclass  Synth_FM_SOURCE.mcopclass  Synth_FREEVERB.mcopclass  Synth_FX_CFLANGER.mcopclass  Synth_MIDI_DEBUG.mcopclass  Synth_MIDI_TEST.mcopclass  Synth_MOOG_VCF.mcopclass  Synth_NIL.mcopclass  Synth_NOISE.mcopclass  Synth_PITCH_SHIFT.mcopclass  Synth_PSCALE.mcopclass  Synth_RC.mcopclass  Synth_SEQUENCE.mcopclass  Synth_SHELVE_CUTOFF.mcopclass  Synth_STD_EQUALIZER.mcopclass  Synth_TREMOLO.mcopclass  Synth_WAVE_PULSE.mcopclass  Synth_WAVE_SOFTSAW.mcopclass  Synth_WAVE_SQUARE.mcopclass  Synth_WAVE_TRI.mcopclass  Synth_XFADE.mcopclass
arts/tools/: Makefile.am  artscontrol.desktop  artscontrol.rc  audiomanager.cpp  audiomanager.h  choosebusdlg.cpp  choosebusdlg.h  levelmeters.cpp  levelmeters.h  main.cpp  main.h  midiinstdlg.cpp  midiinstdlg.h  midimanagerdlg.ui  midimanagerview.cpp  midimanagerview.h  midimanagerwidget.ui  midiportdlg.cpp  midiportdlg.h
kmid/: Makefile.am  README  audiomidi.desktop  channel.cpp  channel.h  channel3d.cpp  channel3d.h  channel4d.cpp  channel4d.h  channelcfgdlg.cpp  channelcfgdlg.h  channelview.cpp  channelview.h  collectdlg.cpp  collectdlg.h  configure.in.in  kaskdlg.cpp  kaskdlg.h  kdisptext.cpp  kdisptext.h  klcdnumber.cpp  klcdnumber.h  kmid.desktop  kmid_part.cpp  kmid_part.h  kmidclient.cpp  kmidclient.h  kmidframe.cpp  kmidframe.h  kmidui.rc  ktrianglebutton.cpp  ktrianglebutton.h  main.cpp  midicfgdlg.cpp  midicfgdlg.h  qslidertime.cpp  qslidertime.h  randomlist.cpp  randomlist.h  rhythmview.cpp  (+6 more)
kmid/player/: awe_sup.h  main.cc
kmidi/: cfg.l  (+37 more)
mpeglib/lib/: Makefile.am
mpeglib/lib/decoder/: Makefile.am  cddaPlugin.cpp  command.cpp  command.h  commandPipe.cpp  decoderPlugin.cpp  decoderPlugin.h  mpegPlugin.cpp  mpgPlugin.cpp  mpgPlugin.h  nukePlugin.cpp  nukePlugin.h  splayPlugin.cpp  splayPlugin.h  tplayPlugin.cpp  tplayPlugin.h  vorbisPlugin.cpp  vorbisPlugin.h
mpeglib/lib/frame/: IOFrameQueue.h  Makefile.am  audioFrame.cpp  audioFrame.h  audioFrameQueue.cpp  audioFrameQueue.h  floatFrame.cpp  frame.h  frameQueue.cpp  framer.cpp  framer.h  pcmFrame.cpp  pcmFrame.h  rawFrame.cpp
mpeglib_artsplug/: CDDAPlayObject.mcopclass  MP3PlayObject.mcopclass  MPGPlayObject.mcopclass  Makefile.am  OGGPlayObject.mcopclass  SplayPlayObject.mcopclass  WAVPlayObject.mcopclass  cddaPlayObject_impl.cpp  configure.in.in  decoderBaseObject.idl  decoderBaseObject_impl.cpp  decoderBaseObject_impl.h  mpeglibartsplay.cpp  mpgPlayObject_impl.cpp  mpgPlayObject_impl.h  nullPlayObject_impl.cpp  nullPlayObject_impl.h  so_play.cpp  splayPlayObject_impl.cpp  splayPlayObject_impl.h  vcdPlayObject_impl.cpp  wavPlayObject_impl.cpp
mpg123_artsplugin/: Makefile.am  compare_to_original.sh  configure.in.in  mpg123PlayObject_impl.cpp  mpg123PlayObject_impl.h
mpg123_artsplugin/mpg123/: Makefile.am  decode_i386.c
noatun/noatun/: CMakeLists.txt  Makefile.am  TODO  artsvideo.idl  avideoframe.cc  avideoframe.h  joinhandler.cpp  joinhandler.h  main.cpp  noatun.desktop  preset.zero
oggvorbis_artsplugin/: Makefile.am  configure.in.in  oggPlayObject.mcopclass  oggPlayObject_impl.cpp  oggPlayObject_impl.h
(+597 files in other folders)
