# add here all files
data_DATA = ayuda.png tocar.png pause.png parar.png \
	    avanzar.png retroceder.png aktion_logo.png ak_setup.png \
	    half.png double.png original.png ak_maximize.png \
	    fullscreen.png

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/aktion/toolbar
