mcopclassdir = $(libdir)/mcop/Arts
mcopclass_DATA = Synth_WAVE_TRI.mcopclass Synth_SHELVE_CUTOFF.mcopclass \
  Synth_ENVELOPE_ADSR.mcopclass Synth_XFADE.mcopclass \
  Synth_MIDI_TEST.mcopclass Synth_NOISE.mcopclass Synth_WAVE_SQUARE.mcopclass \
  Synth_CAPTURE_WAV.mcopclass Synth_FREEVERB.mcopclass \
  Synth_NIL.mcopclass Synth_DEBUG.mcopclass Synth_DATA.mcopclass \
  Synth_ATAN_SATURATE.mcopclass Synth_BRICKWALL_LIMITER.mcopclass \
  Synth_AUTOPANNER.mcopclass Synth_TREMOLO.mcopclass \
  Synth_WAVE_SOFTSAW.mcopclass Synth_WAVE_PULSE.mcopclass \
  Synth_CDELAY.mcopclass Synth_DELAY.mcopclass \
  Synth_FM_SOURCE.mcopclass Synth_FX_CFLANGER.mcopclass \
  Synth_STD_EQUALIZER.mcopclass Synth_RC.mcopclass \
  Synth_MOOG_VCF.mcopclass Synth_PSCALE.mcopclass \
  Synth_SEQUENCE.mcopclass Synth_PITCH_SHIFT.mcopclass \
  Synth_MIDI_DEBUG.mcopclass FreeverbGuiFactory.mcopclass
