#  libplayerplugin - Makefile.am

INCLUDES                	=       $(all_includes)

noinst_LTLIBRARIES              =	libdecoder.la


noinst_HEADERS			=	

libdir                  	=       ${exec_prefix}/lib/$(THIS_LIB_NAME)/decoder

kmpgincludedir 			= 	$(includedir)/$(THIS_LIB_NAME)/decoder

kmpginclude_HEADERS 		=	decoderPlugin.h  command.h \
					commandPipe.h nukePlugin.h \
					vorbisPlugin.h cddaPlugin.h \
					splayPlugin.h mpegPlugin.h \
					mpgPlugin.h tplayPlugin.h

libdecoder_la_SOURCES		=	decoderPlugin.cpp command.cpp \
					commandPipe.cpp nukePlugin.cpp \
					vorbisPlugin.cpp cddaPlugin.cpp \
					splayPlugin.cpp mpegPlugin.cpp \
					mpgPlugin.cpp tplayPlugin.cpp




















