#  libsplay - Makefile.am

EXTRA_DIST		=	

INCLUDES                =       $(all_includes)


noinst_LTLIBRARIES	=	libmpgplayer.la

noinst_HEADERS		=	

libdir                  =       ${exec_prefix}/lib/$(THIS_LIB_NAME)/decoder

kmpgincludedir          =       $(includedir)/$(THIS_LIB_NAME)/decoder

kmpginclude_HEADERS     =	

mpegutildir		=	$(includedir)/$(THIS_LIB_NAME)/mpegutil

mpegutil_HEADERS	=	mpegStreamPlayer.h

libmpgplayer_la_SOURCES	=	mpegStreamPlayer.cpp



















