#  liboggvorbis - Makefile.am


INCLUDES                =       $(all_includes)


EXTRA_DIST		=	



noinst_LTLIBRARIES	=	liboggvorbisbase.la

noinst_HEADERS		=	

libdir                  =	${exec_prefix}/lib/$(THIS_LIB_NAME)/oggvorbis

kmpgincludedir          =       $(includedir)/$(THIS_LIB_NAME)/oggvorbis

kmpginclude_HEADERS     =	ovFramer.h vorbisDecoder.h oggFrame.h \
				vorbisInfo.h


liboggvorbisbase_la_SOURCES	=	ovFramer.cpp vorbisDecoder.cpp \
					oggFrame.cpp vorbisInfo.cpp
















