# libtplay - Makefile.am


EXTRA_DIST = CHANGES README 

INCLUDES                =       $(all_includes)


noinst_LTLIBRARIES     	=       libtplay.la

noinst_HEADERS          =       tplayfunctions.h 

libdir                  =       ${exec_prefix}/lib/$(THIS_LIB_NAME)/decoder

kmpgincludedir          =       $(includedir)/$(THIS_LIB_NAME)/decoder

kmpginclude_HEADERS     =	

libtplay_la_SOURCES	=       au.cpp \
				tplayfunctions.cpp wav.cpp

