#  libplayerplugin - Makefile.am

INCLUDES                	=       $(all_includes)

noinst_LTLIBRARIES              =	libyuvPlugin.la


noinst_HEADERS			=	

libdir                  	=       ${exec_prefix}/lib/$(THIS_LIB_NAME)/decoder

kmpgincludedir 			= 	$(includedir)/$(THIS_LIB_NAME)/decoder

kmpginclude_HEADERS 		=	yuvPlugin.h

libyuvPlugin_la_SOURCES		=	yuvPlugin.cpp














