#  player - Makefile.am


INCLUDES                	=       $(all_includes)

EXTRA_DIST                     	=

noinst_LTLIBRARIES		=	libutilabstract.la

libdir                  	=       ${exec_prefix}/lib/$(THIS_LIB_NAME)/util

noinst_HEADERS			=	
			
kmpgincludedir                  =       $(includedir)/$(THIS_LIB_NAME)/util/abstract

kmpginclude_HEADERS             = 	abs_thread.h threadQueue.h


libutilabstract_la_SOURCES	= 	abs_thread_sdl.cpp threadQueue.cpp






























