#  libsplay - Makefile.am


INCLUDES                =       $(all_includes)


EXTRA_DIST		=	


noinst_LTLIBRARIES	=	libsimplefile.la

noinst_HEADERS		=	fileAccess.h

libdir                  =	${exec_prefix}/lib/$(THIS_LIB_NAME)/util/file

kmpgincludedir          =       $(includedir)/$(THIS_LIB_NAME)/util/file

kmpginclude_HEADERS     =	fileAccess.h


libsimplefile_la_SOURCES	=	fileAccess.cpp










